[package]
name = "cargo-example"
version = "0.1.0"
edition = "2021"
description = "cargo run --example via fuzzy finder"
authors = ["aoki <aoki@aoki.dev>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.8", features = ["derive", "env"] }
skim = "0.9.4"
