[package]
name = "cargo-ex"
version = "0.1.0"
edition = "2021"
description = "cargo run --example via fuzzy finder"
authors = ["aoki <aoki@aoki.dev>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
skim = "0.9.4"
